# aquaworks-esa-hmi

./: .editorconfig  .env.hmi.modbus.ps1  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  _probe_do_power.py  alembic.ini  debug_scanner.py  device_config.json  docker-compose.dev.yml  esa_hmi.db  esa_save_data_5020.json  esa_save_data_5021.json  esa_save_data_5022.json  pyproject.toml  q_table.json  run.ps1  run_sim.ps1  stop.ps1  used_files_SIM.txt
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: eb44086cf9ba_add_rtu_models.py
app/: main.py  main_bak_260119.py  used_files_HMI.txt
app/api/: __init__.py
app/core/: auth.py  config.py  db.py  device_config.py  tsdb.py
app/db/: base.py  session.py
app/domain/: ports.py
app/models/: __init__.py  command.py  rtu.py  settings.py  telemetry.py  ui_theme.py
app/repositories/: command_repo.py  telemetry_repo.py
app/schemas/: command.py  telemetry.py
app/services/: command_service.py  history.py  telemetry_store.py
app/stream/: state.py
app/ui/: charts.py  charts_bak_260112.py  commands copy.py  commands.py  common.py  components.py  config.py  controls.py  dialogs.py  (+8 more)
scripts/: check_current_state.py  clear_logs.py  extract_file_list.py  file_list.txt  temp.ps1  test_json_backend.py  test_logging_arch.py  test_memory.py  test_multi_backend.py  test_physics.py  test_sim_control.py
simulator/: __init__.py  config.py  main.py  model.py  run_all.py  state.py  ui_app.py  utils.py
test/: test_commands.py  test_health.py
tools/: modbus_smoke_test.py  push_demo.py
(+82 files in other folders)
