# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esa-hmi"
version = "0.1.0"
description = "ESA HMI (FastAPI-based) with optional UI/Influx/Science extras"
requires-python = ">=3.10"
dependencies = [
  "fastapi[standard]>=0.115",
  "pydantic>=2.6",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
ui = [
  "nicegui>=2.1",
]
influx = [
  "influxdb-client>=1.43",
]
science = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13"
]
dev = [
  "uvicorn>=0.30",
  "pytest>=8",
  "httpx>=0.27",
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.11"
]
db-sqlite = [
  "aiosqlite>=0.20",
]
db-postgres = [
  "asyncpg>=0.29",
]
all = [
  "esa-hmi[dev,ui,influx,science,db-sqlite]",
]
test = [
  "pytest==7.4.0",
  "httpx",
  "pytest-asyncio",
  "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py313"]

# -----------------------------
# ruff 설정
# -----------------------------
[tool.ruff]
target-version = "py313"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E","F","I","B","UP","ASYNC","SIM","RET","PIE","TID","RUF"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-q"
# asyncio_mode = "auto"


[tool.isort]
profile = "black"
line_length = 100
src_paths = ["app"]